--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,6 +35,35 @@
                     </p></li>     
                 </ol>
             </div>
+
+            <b>Query:</b>
+            <div class="d-flex p-2">
+                <ol>
+                    <li><p class="main-list">Click on 'Query' menu option, you will be redirected to the Query page (Note: PRISA only accepts .avi or .jpg file formats).
+                    </p></li>
+                    <li><p class="main-list">Once on the Query page, you will see a progress bar and a field to submit a file(s).  
+                    </p></li>
+                    <li><p class="main-list">To choose a file, click the button labelled, "Choose File."
+                    </p></li>
+                    <li><p class="main-list">There will be a File Explorer pop up in your browser, allowing you to search your computer for appropriate upload files.
+                    </p></li>
+                    <li><p class="main-list">To select multiple files, hold down the "command" key while clicking.
+                    </p></li>
+                    <li><p class="main-list">When finished, click "open" in your file browser with the appropriate file(s) selected.
+                    </p></li>
+                    <li><p class="main-list">Your file names should appear to the right of the "Choose Files" button.
+                    </p></li>
+                    <li><p class="main-list">When you are ready to submit for upload, click the "Submit" button.
+                    </p></li>
+                    <li><p class="main-list">The progress bar will inform you of the upload progress.
+                    </p></li>
+                    <li><p class="main-list">Appropriate errors will pop up if there were problems during the upload.
+                    </p></li>
+                    <li><p class="main-list">Within 20 seconds per person, per frame, the top possible 3 matches in the PRISA database will appear on screen.
+                    </p></li>     
+                </ol>
+            </div>
+
         </div>
         <%include Footer.ejs %>
     </body>
