--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -10,7 +10,7 @@
             <div class="progress">
                 <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <form method="POST" action="/submit-form">
+            <form method="POST" action="/submit-query">
                 <input type="text" name="username" />
                 <div class="btn">
                     <input type="file" multiple accept=".jpg">
