--- a/views/Upload.ejs
+++ b/views/Upload.ejs
@@ -18,10 +18,10 @@
             <span class="radio"><label class="radio-inline"><input type="radio" name="optradio" value=".avi">.avi</label>
             </span>
             
-            <form action="submit-form" class="form_submit" method="post" enctype="multipart/form-data">
+            <form action="submit-form" id="form-submit" method="post" enctype="multipart/form-data">
                 <!--New Upload Bar-->
                 <div class="input-group">
-                    <div class="input-group-prepend">
+                    <div class="input-group-prepend" onclick="submitForm();">
                         <span class="input-group-text submit">Upload</span>
                     </div>
                     <div class="custom-file">
@@ -29,9 +29,7 @@
                         aria-describedby="inputGroupFileAddon01" disabled>
                         <label class="custom-file-label" for="inputGroupFile01">Choose File(s)</label>
                     </div>
-                </div>
-                <!-- Help needed. Tried to make 'Upload' act as submit button. Failed.-->
-                <input type="submit" class="submit">
+                </div>                
             </form>
 
             <div class="progress">
@@ -80,7 +78,12 @@
                         $('input[name="optradio"]').prop('disabled', 'disabled');
                     }
                 });
+                
+
             });
+            function submitForm() {
+                    document.getElementById('form-submit').submit();
+                }
         </script>
     </body>
 </html>
