--- a/resources/css/prisa.css
+++ b/resources/css/prisa.css
@@ -40,12 +40,15 @@ footer {
     width: 0%;
     background-color: limegreen
 }
-progress:not([value]) {
+.progress{
+    padding: 10px;
+}
+.progress:not([value]) {
     -webkit-appearance: none;
     appearance: none;
     display: none;
  }
- progress[value]::-webkit-progress-value {
+ .progress[value]::-webkit-progress-value {
      background-image: 
     -webkit-linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0,0, 0, .1)        66%, transparent 66%),
     -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)),
@@ -54,3 +57,4 @@ progress:not([value]) {
     border-radius: 2px; 
     background-size: 35px 20px, 100% 100%, 100% 100%;
  }
+ .input-group-prepend {cursor: context-menu;}
