layout page scroll bar "in progress" small adjustments

--- a/views/Results.ejs
+++ b/views/Results.ejs
@@ -6,7 +6,7 @@
     <body>
         <%include navbar.ejs %>
         <div class="container">
-            <h1>Results Page</h1>
+            <b>Results Page</b>
         </div>
         <%include Footer.ejs %>
         </body>
