--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -6,15 +6,15 @@
     </head>
     <body>
         <%include navbar.ejs %>
-        <div class="container">           
-            
+        <div class="container">
+
                 Please select the type of file you would like to upload:
                 <span class="radio"><label class="radio-inline"><input type="radio" name="optradio" value=".jpg">.jpg</label>
                 </span>
                 <span class="radio"><label class="radio-inline"><input type="radio" name="optradio" value=".avi">.avi</label>
                 </span>
-                
-                <form action="submit-form" id="form-submit" method="post" enctype="multipart/form-data">
+
+                <form action="submit-query" id="form-submit" method="post" enctype="multipart/form-data">
                     <!--New Upload Bar-->
                     <div class="input-group">
                         <div class="input-group-prepend" onclick="submitForm();">
@@ -25,27 +25,27 @@
                             aria-describedby="inputGroupFileAddon01" disabled>
                             <label class="custom-file-label" for="inputGroupFile01">Choose File(s)</label>
                         </div>
-                    </div>                
+                    </div>
                 </form>
-    
+
                 <div class="progress">
                     <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-    
+
             </div>
-            
+
         <%include Footer.ejs %>
         <script>
             $(function() {
                 var // Define maximum number of files.
                     max_file_number = 1,
                     // Define your form id or class or just tag.
-                    $form = $('form'), 
+                    $form = $('form'),
                     // Define your upload field class or id or tag.
-                    $file_upload = $('#upload', $form), 
+                    $file_upload = $('#upload', $form),
                     // Define your submit class or id or tag.
-                    $button = $('.submit', $form); 
-    
+                    $button = $('.submit', $form);
+
                 // Disable submit button on page ready.
                 $button.prop('disabled', 'disabled');
 
