--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
         <%include navbar.ejs %>
-        <div class="container">
+        <div class="container smooth-scroll list-unstyled">
             <h1>How to use PRISA</h1>
             <b class="upload-instructions">Uploads:</b>
             <div class="d-flex p-2 smooth-scroll list-unstyled">
