--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -7,30 +7,30 @@
     <body>
         <%include navbar.ejs %>
         <div class="container">
-
-            Please select the type of file you would like to upload:
-            <span class="radio"><label class="radio-inline"><input type="radio" name="optradio" value=".jpg">.jpg</label>
-            </span>
-            <span class="radio"><label class="radio-inline"><input type="radio" name="optradio" value=".avi">.avi</label>
-            </span>
-
-            <form action="submit-query" id="form-submit" method="post" enctype="multipart/form-data">
-                <!--New Upload Bar-->
-                <div class="input-group">
-                    <div class="input-group-prepend" onclick="submitForm();">
-                        <span class="input-group-text submit">Upload</span>
+            <% if(results === undefined) { %>
+                <form action="submit-query" id="form-submit" method="post" enctype="multipart/form-data">
+                    <!--New Upload Bar-->
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <input type="submit" class="input-group-text submit" value="Upload"/>
+                        </div>
+                        <div class="custom-file">
+                            <input type="file" name= "input" class="custom-file-input" id="upload"
+                            aria-describedby="inputGroupFileAddon01" accept=".jpg, .avi">
+                            <label class="custom-file-label" for="inputGroupFile01">Choose File</label>
+                        </div>
                     </div>
-                    <div class="custom-file">
-                        <input type="file" name= "input" class="custom-file-input" id="upload"
-                        aria-describedby="inputGroupFileAddon01" disabled>
-                        <label class="custom-file-label" for="inputGroupFile01">Choose File</label>
-                    </div>
+                </form>
+
+                <div class="progress">
+                    <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-            </form>
-
-            <div class="progress">
-                <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
+            
+            <% } else { %>
+                <% for(var i=0; i < results.length; i++) { %>
+                    <img src="public/<%= results[i] %>">
+                <% } %>
+            <% } %>
 
         </div>
 
@@ -49,17 +49,6 @@
                 // Disable submit button on page ready.
                 $button.prop('disabled', 'disabled');
 
-                $('input[name="optradio"]').change(function() {
-                    let radio_val = $('input[name="optradio"]:checked').val();
-                    $file_upload.removeAttr("disabled");
-                    $file_upload.attr("accept", radio_val);
-                    if (radio_val == ".avi") {
-                        max_file_number = 1;
-                    }
-                    else {
-                        max_file_number = 1;
-                    }
-                });
                 $file_upload.on('change', function () {
                     var number_of_images = $(this)[0].files.length;
                     if (number_of_images > max_file_number) {
@@ -71,9 +60,6 @@
                     }
                 });
             });
-            function submitForm() {
-                    document.getElementById('form-submit').submit();
-            }
         </script>
     </body>
 </html>
