fixed typo on Contact page, removed extraneous space on FAQ, updated Query to only accept jpg

--- a/views/Contact.ejs
+++ b/views/Contact.ejs
@@ -11,7 +11,7 @@
                 As of July 2019, source code may be obtained by emailing da96639@live.missouristate.edu. 
             </p>
             <p>
-                The continuing status of the PRIS(A) software is research conducted by Dr Razib Iqbal. He may be contacted through the Missouri State University.
+                The continuing status of the PRIS(A) software is research conducted by Dr Razib Iqbal. He may be contacted through Missouri State University.
             </p>
         </div>
         <%include Footer.ejs %>
