--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -16,7 +16,7 @@
                         </div>
                         <div class="custom-file">
                             <input type="file" name= "input" class="custom-file-input" id="upload"
-                            aria-describedby="inputGroupFileAddon01" accept=".jpg, .avi">
+                            aria-describedby="inputGroupFileAddon01" accept=".jpg">
                             <label class="custom-file-label" for="inputGroupFile01">Choose File</label>
                         </div>
                     </div>
