--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -35,6 +35,7 @@
         </div>
 
         <%include Footer.ejs %>
+        </div>   
         <script>
             $(function() {
                 var // Define maximum number of files.
