--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -59,6 +59,7 @@
                     } else {
                         $button.prop('disabled', false);
                     }
+                    $('.custom-file-label').html($(this)[0].files[0].name);
                 });
             });
         </script>
