--- a/views/Upload.ejs
+++ b/views/Upload.ejs
@@ -12,7 +12,6 @@
             </span>
             <span class="radio"><label class="radio-inline"><input type="radio" name="optradio" value=".avi">.avi</label>
             </span>
-            
             <form action="submit-form" id="form-submit" method="post" enctype="multipart/form-data">
                 <!--New Upload Bar-->
                 <div class="input-group">
@@ -21,11 +20,12 @@
                     </div>
                     <div class="custom-file">
                         <input type="file" name= "input" class="custom-file-input" id="upload"
-                        aria-describedby="inputGroupFileAddon01" disabled>
+                        aria-describedby="inputGroupFileAddon01" multiple disabled>
                         <label class="custom-file-label" for="inputGroupFile01">Choose File(s)</label>
                     </div>
                 </div>                
             </form>
+            <div class="upload-names"></div>
 
             <div class="progress">
                 <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
@@ -72,6 +72,12 @@
                     if (number_of_images > 0) {
                         $('input[name="optradio"]').prop('disabled', 'disabled');
                     }
+                    let file_names = '';
+                    for(let i = 0; i < number_of_images; i++) {
+                        file_names += $(this)[0].files[i].name + '<br>';
+                    }
+                    $('.upload-names').html(file_names);
+                    
                 });
             });
         </script>
