--- a/views/Upload.ejs
+++ b/views/Upload.ejs
@@ -27,9 +27,10 @@
                 </div>                
             </form>
 
-            <div class="progress">
-                <div id="pb" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+            <div id="pbar">
+
             </div>
+
 
         </div>
         <%include Footer.ejs %>
