moved javascript to only upload to reduce the number of ajax calls

--- a/views/Upload.ejs
+++ b/views/Upload.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <%include Header.ejs %>
+        <script src="public/client.js"></script>
         <title>Upload</title>
     </head>
     <body>
