copyright in footer

--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,6 +1,6 @@
 <footer class="page-footer font-small indigo">
     <div class="footer-copyright text-center py-3">
-        PRISA Version 1.0, 2019
+        PRISA Version 1.0, &copy 2019 MSU
     </div>
 </footer>
 
