--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -15,6 +15,9 @@
                 PRISA is currently in Version 1.0
                 <li>Can I use the PRIS or PRISA software?</li>
                 Currently by request, source is available by email at da96639@live.missouristate.edu
+                <li>How many image files can be loaded at once?</li>
+                
+                <li>How many video files can be loaded at once?</li>
                 <li>What is PRIS?</li>
                 PRIS is an identification software created at MSU. It was made to identify an individual and recognize that same individual later on in a different media. In this way it may be able to track a person of interest across any given media that is fed to it. 
                 <li>How does PRISA work?</li>
@@ -24,12 +27,12 @@
                 <li>What does "bag of features" mean?</li>
                 When PRIS recognizes a person in an image it then needs to build a profile based on a person's characteristics. These include:
                     <ul class="about-inner-unordered-list">
-                        <li>Hair</li>
-                        <li>Face</li>
-                        <li>Skin</li>
-                        <li>Skeleton</li>
-                        <li>Width</li>
-                        <li>Height</li>
+                        <li>Hair Color</li>
+                        <li>Facial Structure</li>
+                        <li>Skin Tone</li>
+                        <li>Skeletal Frame</li>
+                        <li>Width of Body Frame</li>
+                        <li>Height of Body Frame</li>
                     </ul>
                 Each of these features are weighted differently based on general importance and changeability.
             </ul>
