--- a/resources/css/prisa.css
+++ b/resources/css/prisa.css
@@ -19,6 +19,13 @@ body {
     overflow: scroll; 
     overflow: -moz-scrollbars-none;    
 }
+.imgHolder{
+    position: relative;
+}
+.hidden
+{
+    visibility: hidden;
+}
 .container ul {
     text-align: left;
 }
@@ -94,7 +101,7 @@ footer {
 @keyframes progresscolor{
     10% {
         background-color: rgb(235, 42, 42);
-        width: 20%;/*At 10%, change the width to 20%*/
+        width: 10%;/*At 10%, change the width to 20%*/
         }
     40% {
         background-color: rgb(255, 234, 0);
@@ -102,7 +109,7 @@ footer {
         }
     70% {
         background-color: rgb(0, 221, 255);
-        width: 60%;
+        width: 70%;
         }
     100% {
         background-color: rgb(37, 239, 26);
