--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -21,27 +21,37 @@
                         </div>
                     </div>
                 </form>
-                <form method="post" enctype="multipart/form-data" action="/submit_similar">
-                    
-                    <div class="imgHolder" id="imageUploaded">
-                        <p id="puploaded"></p>
+                <div class="container">
+                    <form method="post" enctype="multipart/form-data" action="/submit_similar">
+                    <div id="results_row" class="row hidden">
+                        <div class="col-sm-3" id="leftDiv">
+                            <div class="imgHolder" id="imageUploaded">
+                                <p id="upload_text" class="hidden text-center">Uploaded Image</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-3" id="rightLeftDiv">
+                            <div class="imgHolder" id="imageHolder0">
+                                <p class="text-center" id="psimilar_0"></p>
+                                <label>Same Person:</label><input class="hidden" id="similar_0" name="similar_0" type="checkbox" />
+                            </div>
+                        </div>
+                        <div class="col-sm-3" id="rightCenterDiv">
+                            <div class="imgHolder" id="imageHolder1">
+                                    <p class="text-center" id="psimilar_1"></p>
+                                <label>Same Person:</label><input class="hidden" id="similar_1" name="similar_1" type="checkbox" />
+                            </div>
+                        </div>
+                        <div class="col-sm-3" id="rightRightDiv">
+                            <div class="imgHolder" id="imageHolder2">
+                                    <p class="text-center" id="psimilar_2"></p>
+                                <label>Same Person:</label><input class="hidden" id="similar_2" name="similar_2" type="checkbox" />
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="imgHolder" id="imageHolder0">
-                        <p id="psimilar_0"></p>
-                        <input class="hidden" id="similar_0" name="similar_0" type="checkbox" />
-                    </div>
-                    <div class="imgHolder" id="imageHolder1">
-                            <p id="psimilar_1"></p>
-                            <input class="hidden" id="similar_1" name="similar_1" type="checkbox" />
-                    </div>
-                    <div class="imgHolder" id="imageHolder2">
-                            <p id="psimilar_2"></p>
-                            <input class="hidden" id="similar_2" name="similar_2" type="checkbox" />
-                    </div>
-                    <input type="submit" id="similar_submit" class="hidden" />
+                    <input type="submit" id="similar_submit" class="hidden" value="Associate" />
                 </form>
-        </div>
+                </div>
+            </div>
 
         <%include Footer.ejs %>
         </div>
@@ -64,80 +74,30 @@
                     xhr.open('POST','/submit-query',true);
                     xhr.send(data);
                 
+                    //Paul Brackett
                     xhr.onload = ()=>{
-                        console.log(xhr.response);
-                        //Checking parse
                         var PRISdata = JSON.parse(xhr.responseText);
-                        console.log(PRISdata["1"].image);
-                        console.log(PRISdata["1"].results[0].label);
-                        console.log(PRISdata["1"].results[0].percent.toFixed(1));
-
-                        //Start: Paul Brackett
-                        var image_original = document.querySelector('#imageUploaded');
-
-                        var image_element = document.createElement("img");
-                        image_element.src = 'public\\query_data\\' + PRISdata["1"].image;
-
-                        image_original.appendChild(image_element);
-
-                        var p_uploaded = document.querySelector('#puploaded');
-                            p_uploaded.innerHTML = "The image you uploaded";
-
+                        
+                        displayUploadedImage(PRISdata);
+                        
+                        //If the results exist, go ahead and add them to the page.
                         if(PRISdata["1"].results[0].label !== undefined)
                         {
-                            var outer_div = document.querySelector('#imageHolder0');
-                            var image_element = document.createElement("img");
-                            image_element.src = 'public\\profile_pics\\' + PRISdata["1"].results[0].label + ".jpg";
-
-                            var check_box = document.querySelector('#similar_0');
-
-                            //outer_div.innerHTML = Math.round(PRISdata["1"].results[0].percent);
-                            outer_div.appendChild(image_element);
-                            check_box.classList.remove('hidden');
-                            check_box.setAttribute('value', PRISdata["1"].results[0].label);
-
-                           // var original_prof = document.querySelector("#original_profile");
-                            check_box.setAttribute('value', PRISdata["1"].results[0].label);
-                            var p_similar = document.querySelector('#psimilar_0');
-                            p_similar.innerHTML = "Percent Similar: " + Math.round(PRISdata["1"].results[0].percent);
+                            addResult(PRISdata["1"].results[0], 0);
                         }
 
                         if(PRISdata["1"].results[1].label !== undefined)
                         {
-                            var outer_div = document.querySelector('#imageHolder1');
-                            var image_element = document.createElement("img");
-                            image_element.src = 'public\\profile_pics\\' + PRISdata["1"].results[1].label + ".jpg";
-
-                            //outer_div.innerHTML = Math.round(PRISdata["1"].results[1].percent);
-                            outer_div.appendChild(image_element);
-                            var check_box = document.querySelector('#similar_1');
-                            check_box.classList.remove("hidden");
-                            check_box.setAttribute('value', PRISdata["1"].results[1].label);
-                            var p_similar = document.querySelector('#psimilar_1');
-                            p_similar.innerHTML = "Percent Similar: " + Math.round(PRISdata["1"].results[1].percent);
-
+                            addResult(PRISdata["1"].results[1], 1);
                         }
 
                         if(PRISdata["1"].results[2].label !== undefined)
                         {
-                            var outer_div = document.querySelector('#imageHolder2');
-                            var image_element = document.createElement("img");
-                            image_element.src = 'public\\profile_pics\\' + PRISdata["1"].results[2].label + ".jpg";
+                            addResult(PRISdata["1"].results[2], 2);
 
-                            //outer_div.innerHTML = Math.round(PRISdata["1"].results[2].percent);
-                            outer_div.appendChild(image_element);
-
-                            var check_box = document.querySelector('#similar_2');
-                            check_box.classList.remove("hidden");
-                            check_box.setAttribute('value', PRISdata["1"].results[2].label);
-
-                            var p_similar = document.querySelector('#psimilar_2');
-                            p_similar.innerHTML = "Percent Similar: " + Math.round(PRISdata["1"].results[2].percent);
                         }
 
-                        var submit_button = document.querySelector('#similar_submit');
-                        submit_button.classList.remove('hidden');
-                         //Start: Paul Brackett
+                        showElements();
                   }
                   
             });
@@ -161,6 +121,49 @@
                     $('.custom-file-label').html($(this)[0].files[0].name);
                 });
             });
+
+            //Paul Brackett
+            function addResult(result, result_num){
+                //Function does a ton of DOM manip.
+                //Selects a couple elements that were id-hardcoded 0 to 2.
+                var outer_div = document.querySelector('#imageHolder'+result_num);
+                var image_element = document.createElement("img");
+                var p_similar = document.querySelector('#psimilar_'+result_num);
+                var check_box = document.querySelector('#similar_'+result_num);
+
+                image_element.classList.add('results_image');
+                image_element.src = 'public\\profile_pics\\' + result.label + ".jpg";
+
+                outer_div.appendChild(image_element);
+
+                check_box.setAttribute('value', result.label);
+                check_box.classList.remove('hidden');
+
+                p_similar.innerHTML = "Similarity: " + Math.round(result.percent) + "%";
+            };
+
+            .//Paul Brackett
+            function showElements(){
+                var submit_button = document.querySelector('#similar_submit');
+                var results_row = document.querySelector('#results_row');
+                var upload_text = document.querySelector('#upload_text');
+
+                submit_button.classList.remove('hidden');
+                results_row.classList.remove('hidden');
+                upload_text.classList.remove('hidden');
+            };
+
+            //Paul Brackett
+            function displayUploadedImage(pris_data){
+                var image_original_div = document.querySelector('#imageUploaded');
+                var image_element = document.createElement("img");
+
+                image_element.src = 'public\\query_data\\' + pris_data["1"].image;
+                image_element.classList.add('results_image');
+
+                image_original_div.appendChild(image_element);
+            };
+
         </script>
     </body>
 </html>
