--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -142,7 +142,7 @@
                 p_similar.innerHTML = "Similarity: " + Math.round(result.percent) + "%";
             };
 
-            .//Paul Brackett
+            //Paul Brackett
             function showElements(){
                 var submit_button = document.querySelector('#similar_submit');
                 var results_row = document.querySelector('#results_row');
