--- a/resources/css/prisa.css
+++ b/resources/css/prisa.css
@@ -23,9 +23,13 @@ body {
     position: relative;
 }
 .results_image {
-    height: 250px;
-    width: auto;
+    height: auto;
+    width: auto;    
     border-width: 10px;
+    max-width: 100%;
+}
+.row{
+    flex-wrap: nowrap;
 }
 .hidden
 {
@@ -85,43 +89,14 @@ footer {
     margin: 10px;
     height:35px;
 }
-.progress-bar {    
-    background-color: #0017ff;
-}
+
+.progress-bar {background-color: green; color: black;}
+.progress-bar-1 {background-color: rgb(245, 94, 120);}
+.progress-bar-33 {background-color: orange; }
+.progress-bar-67 {background-color: lightseagreen;}
 /*.progress:not([value]) {display: none;}*/
 
-.progress[value]::-webkit-progress-value {
-    display: flex;
-    background-image: 
-    -webkit-linear-gradient(-45deg, transparent 33%, rgba(0, 0, 0, .1) 33%, rgba(0,0, 0, .1)        66%, transparent 66%),
-    -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)),
-    -webkit-linear-gradient(left, yellow, green );
-    height: 40px;
-    border-radius: 2px; 
-    background-size: 35px 20px, 100% 100%, 100% 100%;
-}
-.progress-bar-33{background-color: red;}
-.progress-bar-67{background-color: yellow;}
-.progress-bar-100{background-color: blue;}
-.input-group-prepend {
-    cursor: context-menu;
-}
-
-@keyframes progresscolor{
-    10% {
-        background-color: rgb(235, 42, 42);
-        width: 10%;/*At 10%, change the width to 20%*/
-        }
-    40% {
-        background-color: rgb(255, 234, 0);
-        width: 40%;
-        }
-    70% {
-        background-color: rgb(0, 221, 255);
-        width: 70%;
-        }
-    100% {
-        background-color: rgb(37, 239, 26);
-        width: 100%;
-        }
+.col-sm-3{
+                
+    bottom:0;   
 }
